search box: dark mode fix in mobile view

--- a/assets/css/quickiedox.css
+++ b/assets/css/quickiedox.css
@@ -929,6 +929,11 @@ html, body {
   line-height: 1.25rem;
 }
 
+.dark .search-results div {
+  --tw-text-opacity: 1;
+  color: rgb(226 232 240 / var(--tw-text-opacity));
+}
+
 .search-results div.result {
   background-image: url('/assets/images/right.svg');
   background-repeat: no-repeat;
@@ -941,9 +946,14 @@ html, body {
   background-color: rgb(241 245 249 / 0.8);
 }
 
+.dark .search-results div.result {
+  --tw-text-opacity: 1;
+  color: rgb(203 213 225 / var(--tw-text-opacity));
+}
+
 .dark .search-results div.result:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
 }
 
 nav li h1, nav li h2, nav li h3 {
@@ -1400,18 +1410,6 @@ td.production {
   height: 100vh;
 }
 
-.max-h-screen {
-  max-height: 100vh;
-}
-
-.max-h-\[calc\(100\%_-_20rem\)\] {
-  max-height: calc(100% - 20rem);
-}
-
-.max-h-\[calc\(100vh_-_20rem\)\] {
-  max-height: calc(100vh - 20rem);
-}
-
 .max-h-\[calc\(100vh_-_10rem\)\] {
   max-height: calc(100vh - 10rem);
 }
@@ -1466,10 +1464,6 @@ td.production {
 
 .max-w-sm {
   max-width: 24rem;
-}
-
-.max-w-xl {
-  max-width: 36rem;
 }
 
 .flex-grow {
@@ -1637,11 +1631,6 @@ td.production {
   border-color: rgb(203 213 225 / 0.6);
 }
 
-.border-slate-800 {
-  --tw-border-opacity: 1;
-  border-color: rgb(30 41 59 / var(--tw-border-opacity));
-}
-
 .\!bg-slate-700 {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(51 65 85 / var(--tw-bg-opacity)) !important;
@@ -1650,6 +1639,10 @@ td.production {
 .bg-amber-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(255 251 235 / var(--tw-bg-opacity));
+}
+
+.bg-black\/60 {
+  background-color: rgb(0 0 0 / 0.6);
 }
 
 .bg-primary-100 {
@@ -1715,10 +1708,6 @@ td.production {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-white\/90 {
-  background-color: rgb(255 255 255 / 0.9);
 }
 
 .from-black {
@@ -2104,10 +2093,6 @@ td.production {
   opacity: 0.4;
 }
 
-.opacity-90 {
-  opacity: 0.9;
-}
-
 .shadow-2xl {
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
@@ -2131,6 +2116,11 @@ td.production {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
+.shadow-slate-100\/80 {
+  --tw-shadow-color: rgb(241 245 249 / 0.8);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
 .shadow-slate-400 {
   --tw-shadow-color: #94a3b8;
   --tw-shadow: var(--tw-shadow-colored);
@@ -2145,6 +2135,12 @@ td.production {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.backdrop-blur-sm {
+  --tw-backdrop-blur: blur(4px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
 .marker\:text-xs *::marker {
@@ -2281,6 +2277,11 @@ td.production {
   visibility: hidden;
 }
 
+.dark .dark\:divide-slate-800 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-opacity: 1;
+  border-color: rgb(30 41 59 / var(--tw-divide-opacity));
+}
+
 .dark .dark\:border-slate-600 {
   --tw-border-opacity: 1;
   border-color: rgb(71 85 105 / var(--tw-border-opacity));
@@ -2404,6 +2405,11 @@ td.production {
   color: rgb(186 230 253 / var(--tw-text-opacity));
 }
 
+.dark .dark\:text-slate-200 {
+  --tw-text-opacity: 1;
+  color: rgb(226 232 240 / var(--tw-text-opacity));
+}
+
 .dark .dark\:text-slate-300 {
   --tw-text-opacity: 1;
   color: rgb(203 213 225 / var(--tw-text-opacity));
@@ -2435,12 +2441,6 @@ td.production {
 .dark .dark\:shadow-none {
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.dark .dark\:shadow-sm {
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -2500,9 +2500,9 @@ td.production {
   border-color: rgb(51 65 85 / var(--tw-border-opacity));
 }
 
-.dark .dark\:hover\:bg-slate-600:hover {
+.dark .dark\:hover\:bg-slate-700:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:hover\:text-primary-400:hover {
@@ -2555,11 +2555,6 @@ td.production {
     z-index: 40;
   }
 
-  .md\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
   .md\:ml-0 {
     margin-left: 0px;
   }
@@ -2598,6 +2593,10 @@ td.production {
 
   .md\:max-w-4xl {
     max-width: 56rem;
+  }
+
+  .md\:max-w-xl {
+    max-width: 36rem;
   }
 
   .md\:basis-1\/3 {
@@ -2662,14 +2661,6 @@ td.production {
     padding-top: 1.5rem;
   }
 
-  .md\:pb-12 {
-    padding-bottom: 3rem;
-  }
-
-  .md\:pb-20 {
-    padding-bottom: 5rem;
-  }
-
   .md\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
@@ -2683,10 +2674,6 @@ td.production {
   .md\:text-slate-700 {
     --tw-text-opacity: 1;
     color: rgb(51 65 85 / var(--tw-text-opacity));
-  }
-
-  .md\:opacity-100 {
-    opacity: 1;
   }
 
   .md\:shadow-none {
